bug fix swagger pedidos
